--- a/assets/styles/scss/common/icons.scss
+++ b/assets/styles/scss/common/icons.scss
@@ -2,7 +2,7 @@
   max-width: 30px;
   max-height: 30px;
   // stroke: $color-white;
-  // stroke-width: 3px; 
+  // stroke-width: 3px;
 }
 
 .icon-cross {
@@ -46,7 +46,7 @@
 
 .icon-whatsapp {
   max-width: 35px;
-  // max-height: 40px;
+  max-height: 35px;
   fill: $color-white;
 }
 
